--- a/docs/css/colors.css
+++ b/docs/css/colors.css
@@ -169,6 +169,15 @@ a.nv-buy-link:hover,.load-buy-link:hover {
 	background: #ff9fb27f;  border-radius: 0.5em;  padding: 0.2em;  margin: 0.2em; 
 }
 
+.blobJetsonHacks {
+	background: #394657; color: #fff; font-size: 0.8em; border-radius: 0.1em;  padding-left: 0.3em; padding-right: 0.3em;  margin: 0.2em; 
+}
+
+.blobHackster {
+	background: #2e9fe6; color: #fff; font-size: 0.8em; border-radius: 0.1em;  padding-left: 0.3em; padding-right: 0.3em;  margin: 0.2em; 
+}
+
+
 .highlightYellow {
 	background: #ffc105;
     border-radius: 0.5em;  
