--- a/docs/css/colors.css
+++ b/docs/css/colors.css
@@ -1,15 +1,25 @@
 [data-md-color-scheme="playful-purple"] {
 
-	--md-accent-fg-color: #b12bff;
-	--md-accent-fg-color--light: hsl(278, 100%, 78%);
-	--md-accent-bg-color: #ffffff;
+	--md-accent-fg-color--rgb: 177, 43, 255; /* #b12bff */  
+	--md-accent-fg-color--hsl: 278, 100%, 58%;
+	--md-accent-fg-color: hsl(var(--md-accent-fg-color--hsl));
+	
+	--md-accent-fg-color--dark-hsl: 278, 100%, 51%;
+	--md-accent-fg-color--dark: hsl(var(--md-accent-fg-color--dark-hsl));
+	
+	--md-accent-fg-color--light-rgb: 214, 143, 255; /* D68FFF */
+	--md-accent-fg-color--light-hsl: 278, 100%, 78%;
+	--md-accent-fg-color--light: hsla(var(--md-accent-fg-color--light-hsl), 1.0);
+	
+	--md-accent-bg-color--rgb: 255, 255, 255; /* #ffffff */
+	--md-accent-bg-color: rgb(var(--md-accent-bg-color--rgb));
 
 	--md-primary-fg-color:        hsl(210, 100%, 40%);
 	--md-primary-fg-color--light: hsl(210, 100%, 50%);
 	--md-primary-fg-color--dark:  hsl(210, 100%, 20%);
 
 	--md-mermaid-node-bg-color: #e3f5c5;
-    --md-mermaid-node-fg-color: #518000;
+     --md-mermaid-node-fg-color: #518000;
 	--md-default-fg-color--lightest:     #f9fff2;
 }
 
@@ -179,6 +189,10 @@ a.nv-buy-link:hover,.load-buy-link:hover {
 
 .blobMedium {
 	background: #292929; color: #fff; font-size: 0.8em; border-radius: 0.1em;  padding-left: 0.3em; padding-right: 0.3em;  margin: 0.2em; 
+}
+
+.blobNvidia {
+	background: #76b900; color: #fff; font-size: 0.8em; border-radius: 0.1em;  padding-left: 0.3em; padding-right: 0.3em;  margin: 0.2em; 
 }
 
 .highlightYellow {
