--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -2,8 +2,20 @@
     background: #FFFFFF
 }
 
+.md-header__button {
+    display: none!important;
+}
+
+.md-logo {
+    display: none;
+    width: 0;
+    margin: 0!important;
+    padding: 0!important;
+}
+
 .md-header__title {
-    color: #000000
+    color: #000000;
+    margin-left: 0.6rem!important;
 }
 
 .md-tabs {
