--- a/docs/css/colors.css
+++ b/docs/css/colors.css
@@ -246,6 +246,11 @@ a.nv-buy-link:hover,.load-buy-link:hover {
 	background: #222; color: #FFF; font-size: 0.8em; border-radius: 0.3em;  padding-left: 0.3em; padding-right: 0.3em;  margin: 0.2em; 
 }
 
+.markedYellow {
+	background: #dfff00;
+	padding: 0.2em
+}
+
 .highlightYellow {
 	background: #ffc105;
     border-radius: 0.5em;  
