--- a/docs/portal/css/fields.css
+++ b/docs/portal/css/fields.css
@@ -1,8 +1,12 @@
 /**
  * Styles for the property editor and input fields
  */
+
+.property-field, .property-label {
+  font-size: 16px;
+}
+
 .property-field {
-  font-size: 90%;
   font-family: monospace;
   color: rgba(0,0,0,0.7);
   background: rgba(255,255,255,0.2);
