--- a/docs/portal/css/card.css
+++ b/docs/portal/css/card.css
@@ -70,7 +70,7 @@
     color: #000000;
 }
 
-.help-container {
+/*.rollup-container {
     position: relative;
     bottom: 460px;
     width: 310px;
@@ -80,34 +80,103 @@
     background: linear-gradient(0deg, hsl(0, 0%, 90%) 33%,hsl(0, 0%, 95%)  100%);
     padding-bottom: 7px;
     margin-left: auto;
+}*/
+
+.rollup-container {
+    min-width: 315px;
+    max-width: 315px;
+    margin: 1px 0px 7px 17px;
+    padding: 0px;
+    /*padding-bottom: 7px;*/
+    border-radius: 3px 3px 3px 3px;
+    background: none;
+    box-shadow: 2px 7px 13px 0px rgba(0,0,0,0.15);
 }
 
-.help-container-body {
-    margin: 5px;
-    margin-top: 10px;
-    padding: 0px 11px;
+.rollup-container a , .rollup-container a:hover {
+    text-decoration-thickness: 1px;
+}
+
+.rollup-container a:hover {
+    text-decoration-color: rgb(175,175,175);
+}
+
+.rollup-container-body {
+    /*margin: 5px;
+    margin-top: 10px;*/
+    margin: 0px;
+    padding: 10px;
     font-size: 14px;
+    border-radius: 0px 0px 5px 5px;
+    background: linear-gradient(0deg, hsl(0, 0%, 90%) 33%,hsl(0, 0%, 95%)  100%);
 }
 
-.help-container .btn-sm {
+.rollup-container .btn-sm {
     font-size: 13px; 
     padding: 5px 10px;
     text-shadow: 2px 2px 3px rgb(0,0,0,.2);
     box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.15);
+    background-color:hsl(82, 100%, 33%);
 }
 
-.help-container .btn-sm:hover {
-    background-color:hsl(82, 100%, 41%);
+.rollup-container .btn-sm:hover {
+    background-color:hsl(82, 100%, 40%);
 }
 
-.help-container-header {
-    background-color: #76b900;
+.rollup-container.hidden_body {
+    margin-bottom: 0px;
+}
+
+.rollup-container.hidden_body .rollup-container-header {
+    background-color: hsl(0, 0%, 61%);
+    color: rgb(230,230,230);
+    margin-bottom: 0px;
+}
+
+.rollup-container.hidden_body .rollup-container-header:hover {
+    background-color: hsl(120, 1%, 64%);
+}
+
+.rollup-container.hidden_body .rollup-container-title:hover {
+    color: rgb(250,250,250);
+}
+
+.root-container {
+    scrollbar-color: rgb(255,255,255,0.8);
+}
+
+.rollup-container-header {
+    background-color:hsl(82, 100%, 33%);
     color: rgb(250,250,250);
     text-shadow: 2px 2px 3px rgb(0,0,0,.3);
     border-radius: 5px 5px 0px 0px;
-    border-bottom: 1px rgba(0,0,0,0.2);
     box-shadow: 2px 5px 3px 0px rgba(0,0,0,0.15);
     padding: 7px 15px;
     font-size: 16px;
     font-weight: 500;
+    margin-bottom: 3px;
+}
+
+.vertical-divider {
+    border-left: 3px solid rgba(0,0,0,0.05);
+    margin: 75px 0px 10px 15px;
+    flex-grow: 1;
+}
+
+.rollup-container-title:hover {
+    color: rgb(255,255,255);
+}
+
+.rollup-container-header:hover {
+    background-color:hsl(82, 100%, 36%);
+    /*background-color: #76b900;*/
+}
+
+.rollup-container-icon {
+    font-size: 120%; 
+    color: rgba(255,255,255,0.7);
+}
+
+.rollup-container-icon:hover {
+    color: rgba(255,255,255,0.85);
 }
