--- a/docs/portal/css/code.css
+++ b/docs/portal/css/code.css
@@ -5,7 +5,6 @@
   background: var(--theme-gray-dark);
   /*background: linear-gradient(165deg, rgb(0,0,0,0.475) 0%, rgb(0,0,0,0.55) 100%);*/
   padding: 40px 10px 15px 10px;
-  font-size: 85%;
 }
 
 pre[class*="language-"] {
@@ -19,6 +18,7 @@ pre[class*="language-"] > code[class*="language-"] {
   background: none;
   padding: 0;
   margin: 0;
+  font-size: 15px;
 }
 
 .code-block, .btn-float, .btn-absolute {
@@ -28,7 +28,7 @@ pre[class*="language-"] > code[class*="language-"] {
   font-weight: 500;
 }
 
-.llama-header .code-block {
+.code-block {
   padding-top: 20px;
 }
 
