--- a/docs/portal/css/sidebar.css
+++ b/docs/portal/css/sidebar.css
@@ -1,13 +1,14 @@
 
 .sidebar {
-  margin: 10px 0px 0px 15px;
-  padding: 20px;
+  margin: -15px -15px 0px 0px;
+  padding: 15px;
   border-style: solid;
-  border-color: hsl(0, 0%, 70%);
+  border-color: hsl(0, 0%, 80%);
   border-radius: 1px 1px 1px 1px;
   border-width: 0px 0px 2px 2px;
-  box-shadow: -2px 3px 8px 2px rgba(0,0,0,0.2);
-  background-color: hsl(0, 0%, 89%);
+  box-shadow: 2px 3px 8px 2px rgba(0,0,0,0.2);
+  /*background: hsl(0, 0%, 89%);*/
+  background: linear-gradient(0deg, hsl(0, 0%, 89%) 0%, hsl(0, 0%, 93%) 100%);
 }
 
 .sidebar-controls {
@@ -21,3 +22,17 @@
   font-size: 100%;
   opacity: 0.75;
 }
+
+.search-results-area {
+  display: flex;
+  flex-direction: row;
+  margin: 35px 12px 0px 0px;
+  padding: 0px 0px 12px 0px;
+  background: rgba(0,0,0,0.04);
+}
+
+.search-results-container {
+  overflow-x: scroll;
+  padding: 15px 5px 20px 20px;
+}
+
