--- a/docs/portal/css/themes.css
+++ b/docs/portal/css/themes.css
@@ -24,6 +24,7 @@
   --theme-gray-light: rgb(205,205,205);
   --theme-gray-med: rgb(140,140,140);
   --theme-gray-dark: rgb(90,90,90);
+  --theme-gray-dark2: rgb(78,78,78);
   --theme-gray-darker: rgb(68,68,68);
 
   /* fonts */
