Add Open WebUI basic and RAG demo instruction

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -8,7 +8,7 @@
 
 .md-icon {
     color: black;
-} 
+}
 
 .md-header__title {
     color: #000000;
@@ -158,4 +158,8 @@
 .md-typeset .tabbed-content {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.shadow {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
