--- a/docs/portal/css/rollup.css
+++ b/docs/portal/css/rollup.css
@@ -12,8 +12,8 @@
 }*/
 
 .rollup-container {
-  min-width: 315px;
-  max-width: 315px;
+  /*min-width: 315px;
+  max-width: 315px;*/
   margin: 1px 0px 7px 0px;
   padding: 0px;
   /*padding-bottom: 7px;*/
