--- a/docs/portal/css/sidebar.css
+++ b/docs/portal/css/sidebar.css
@@ -1,5 +1,9 @@
 
 .sidebar {
+  position: absolute;
+  min-width: 350px;
+  max-width: 350px;
+  left: calc(100% - 350px + 10px);
   margin: -15px -15px 0px 0px;
   padding: 15px;
   border-style: solid;
