added AIM and llama-factory

--- a/docs/portal/css/navtree.css
+++ b/docs/portal/css/navtree.css
@@ -25,6 +25,10 @@
     padding: 5px 10px;
 }
 
+.theme-light {
+    border-color:rgba(100,100,100,0.8) !important;
+}
+
 .theme-light .nav-tree-app-text {
     color: rgba(255,255,255,1);
     background-color: rgba(0,0,0,0.5);
