--- a/docs/portal/css/modal.css
+++ b/docs/portal/css/modal.css
@@ -117,6 +117,10 @@
   border: 1px solid rgba(255,255,255,0.5);
 }
 
+.modal-header-extensions select option {
+  background-color: rgba(100,100,100,1.0);
+}
+
 /*.modal-header-extensions div {
   margin-left: 0px;
   margin-bottom: 10px;
