--- a/docs/portal/css/models.css
+++ b/docs/portal/css/models.css
@@ -2,13 +2,23 @@
  * Styles and elements for certain models
  */
 
- .modal-header-extensions {
+.modal-header-extensions {
   background-repeat: no-repeat, no-repeat; 
   background-position-x: 0px, right; 
   height: 160px;
- }
+}
 
- .llama-header {
+.generic-header {
+  height: 100px;
+}
+
+.vlm-header {
+  background-image: url('/portal/data/models/images/headers/solar-2.webp'); 
+  background-position-y: -110px;
+  background-size: 1465px 750px;
+}
+
+.llama-header {
   padding-top: 20px;
 }
 
