--- a/docs/portal/css/sidebar.css
+++ b/docs/portal/css/sidebar.css
@@ -15,6 +15,10 @@
   background: linear-gradient(0deg, hsl(0, 0%, 89%) 0%, hsl(0, 0%, 93%) 100%);
 }
 
+.sidebar.hidden {
+  display: none !important;
+}
+
 .sidebar-controls {
   display: inline-flex;
 }
